GNOME Bugzilla – Bug 795364
parsebin: Post STREAM_COLLECTION on EVENT_STREAM_COLLECTION
Last modified: 2018-11-03 12:05:07 UTC
See commit message.
Created attachment 371117 [details] [review] parsebin: Post STREAM_COLLECTION on EVENT_STREAM_COLLECTION Otherwise decodebin won't get notified about STREAM_COLLECTION comming from the sources and thus will never get informored about it. Without being informed about the stream collection decodebin won't be able to select any streams. It ends up not creating any output for the streams defined from outside parserbin.
To reproduce the issue you can get the element propose on https://bugzilla.gnome.org/show_bug.cgi?id=795366 and run gst-launch-1.0 playbin3 uri=test://video+audio The testsrc element will: * Create streams for each of its pads and make sure those are used in the stream-start event * Push a STREAM_COLLECTION on each of its sinkpad before pushing the caps Without the patch from here, decodebin will never link the pad from testsrc (down the line).
commit 89d0e9cc92a86aa0227ee87406737b6d31670aea (HEAD -> master, origin/master, origin/HEAD) Author: Thibault Saunier <tsaunier@igalia.com> Date: Wed Apr 18 16:06:07 2018 -0300 parsebin: Post STREAM_COLLECTION on EVENT_STREAM_COLLECTION Otherwise decodebin won't get notified about STREAM_COLLECTION comming from the sources and thus will never get informored about it. Without being informed about the stream collection decodebin won't be able to select any streams. It ends up not creating any output for the streams defined from outside parserbin. https://bugzilla.gnome.org/show_bug.cgi?id=795364
This needs more thinking.
Did you do more thinking yet?
-- GitLab Migration Automatic Message -- This bug has been migrated to freedesktop.org's GitLab instance and has been closed from further activity. You can subscribe and participate further through the new bug through this link to our GitLab instance: https://gitlab.freedesktop.org/gstreamer/gst-plugins-base/issues/434.