gst/playback/gstparsebin.c
@@ -4046,6 +4046,9 @@ gst_parse_pad_event (GstPad * pad, GstPadProbeInfo * info, gpointer user_data)
       GstStreamCollection *collection = NULL;
       gst_event_parse_stream_collection (event, &collection);
       gst_parse_pad_update_stream_collection (parsepad, collection);
+      gst_element_post_message (GST_ELEMENT (parsepad->parsebin),
+          gst_message_new_stream_collection (GST_OBJECT (parsepad->parsebin),
+              collection));
       break;
     }
     case GST_EVENT_EOS:{
